[package]
name = "flathead"
description = "z-machine ZAP assembler"
version = "0.1.0"
authors = ["crawlingChaos"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/crawlingChaos/flathead"
repository = "https://github.com/crawlingChaos/flathead"
readme = "README.md"

[dependencies]
